# Agents-1

./: .env.example  README.md  app.py  pyproject.toml  report.md
src/: app.py
src/nltosql/: __init__.py  crew.py  main.py
src/nltosql/config/: agents.yaml  tasks.yaml
src/templates/: index.html
tests/: test_crew.py
