[project]
name = "nltosql"
version = "0.1.0"
description = "nlToSql using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
nltosql = "nltosql.main:run"
run_crew = "nltosql.main:run"
train = "nltosql.main:train"
replay = "nltosql.main:replay"
test = "nltosql.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
